...
              placeholder={`${t("search")}...`}
              onChangeText={onSearchTextChange}
              {...triggerProps}
            />
            <InputSlot style={styles.searchIcon}>
              <Pressable onPress={openResults}>
                <InputIcon as={SearchIcon} testID="searchButton" />
              </Pressable>
            </InputSlot>
          </Input>
        );
      }}
    >
...
