{
    "close": "Close",
    "complete": "Complete",
    "deleting": "Deleting",
    "downloading": "Downloading",
    "initiating": "Initiating",
    "internet-connection-error": "No internet connection",
    "no-content": "No content found. Please import a document.",
    "no-result": "We found no result for your search",
    "more-results_one": "Found {{count}} more result...",
    "more-results_other": "Found {{count}} more results...",
    "refresh-content": "Refresh content",
    "reloading": "Reloading",
    "search": "Search",
    "settings": "Settings",
    "table-contents": "Table of Contents",
    "updating-database": "Updating database",
    "view-all": "View all pages",
    "view-table-contents": "View table of contents"
}