...
              <Icon as={CloseIcon} />
            </DrawerCloseButton>
          </SafeAreaView>
        </DrawerHeader>
        <DrawerBody>
          {Array.from(tableContent.entries()).map((entry, index) => {
            const letter = isNaN(Number(entry[0])) ? entry[0] : "0-9";
            const pageArr = entry[1];

            return (
              <React.Fragment key={index}>
                <Heading style={styles.letter}>{letter}</Heading>
                {pageArr.map((p, pIndex) => {
...
