appId: com.dlyfoung.ebinder
---
- launchApp
- assertVisible: 
    id: "readerContent"
- assertNotVisible: "None but Jesus"
- tapOn: "Search..."
- inputText: "None"
- assertVisible: "None but Jesus"
- tapOn: "None but Jesus"
- tapOn: 
    id: "readerContent"
- assertVisible: "None but Jesus"