appId: com.dlyfoung.ebinder
---
# Test that the search button re-open the search results
- launchApp
- tapOn: "Search..."
- inputText: "None"
- assertVisible: "None but Jesus"
- tapOn:
    id: "readerContent"
- assertNotVisible: "None but Jesus"
- tapOn: 
    id: "searchButton"
- assertVisible: "None but Jesus"